--- a/package.json
+++ b/package.json
@@ -1,29 +1,22 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^0.21",
-        "bootstrap": "^4.0.0",
-        "datatables.net-buttons-bs4": "^1.6.5",
-        "jquery": "^3.2",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "popper.js": "^1.12",
-        "postcss": "^8.1.14",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "@popperjs/core": "^2.11.8",
+        "axios": "^1.7.4",
+        "bootstrap": "^5.3.3",
+        "jquery": "^3.7.1",
+        "laravel-vite-plugin": "^1.0",
+        "lodash": "^4.17.21",
+        "sass-embedded": "^1.79.3",
+        "vite": "^5.0"
     },
     "dependencies": {
-        "datatables.net": "^1.10.23",
-        "datatables.net-bs4": "^1.10.23"
+        "datatables.net": "^2.1.7",
+        "datatables.net-bs5": "^2.1.7"
     }
 }
